--- a/src/containers/Clients/List/ClientListContainer.module.scss
+++ b/src/containers/Clients/List/ClientListContainer.module.scss
@@ -20,6 +20,7 @@
 
       &:focus {
         outline: none;
+        border: 1px solid #03a9f4;
       }
     }
 
@@ -37,7 +38,7 @@
       cursor: pointer;
 
       .icon {
-        font-size: 16px;
+        margin-right: 5px;
       }
 
       &:focus {
