[UPDATE] Firebase deployment

--- a/src/containers/Clients/List/ClientListContainer.module.scss
+++ b/src/containers/Clients/List/ClientListContainer.module.scss
@@ -74,4 +74,11 @@
     border: 1px solid #ddd;
     text-align: center;
   }
+
+  .iconPencil {
+    margin-right: 5px;
+  }
+  .iconTrash {
+    margin-left: 5px;
+  }
 }
