--- a/src/containers/Clients/Add/ClientAddContainer.module.scss
+++ b/src/containers/Clients/Add/ClientAddContainer.module.scss
@@ -2,4 +2,141 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+
+  .container {
+    border: 1px solid #ddd;
+    padding: 20px;
+    margin-bottom: 50px;
+
+    h2 {
+      font-weight: 600;
+    }
+
+    .title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .btnAddMore {
+        font-size: 18px;
+        text-decoration: underline;
+        font-weight: 600;
+        cursor: pointer;
+
+        &:active {
+          opacity: 0.5;
+        }
+      }
+    }
+  }
+
+  .inputItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 16px;
+    margin-bottom: 10px;
+
+    span {
+      width: 200px;
+    }
+    input {
+      height: 40px;
+      width: 300px;
+      font-size: 16px;
+      padding: 0 20px;
+    }
+    .file {
+      display: none;
+    }
+
+    .btnUpload {
+      width: 200px;
+      height: 40px;
+      border-radius: 5px;
+      font-size: 16px;
+      line-height: 40px;
+      font-weight: 600;
+      text-align: center;
+      color: #555;
+      align-items: center;
+      border: 1px solid #555;
+      cursor: pointer;
+
+      .icon {
+        margin-right: 5px;
+      }
+
+      &:active {
+        background-color: #555;
+        color: #fff;
+      }
+    }
+  }
+
+  .btnGroup {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+
+    .btnSave {
+      width: 100px;
+      height: 40px;
+      border-radius: 5px;
+      font-size: 16px;
+      line-height: 40px;
+      font-weight: 600;
+      text-align: center;
+      color: #03a9f4;
+      align-items: center;
+      border: 1px solid #03a9f4;
+      cursor: pointer;
+      margin-right: 50px;
+
+      &:active {
+        background-color: #03a9f4;
+        color: #fff;
+      }
+    }
+
+    .btnCancel {
+      width: 100px;
+      height: 40px;
+      border-radius: 5px;
+      font-size: 16px;
+      line-height: 40px;
+      font-weight: 600;
+      text-align: center;
+      color: #b71c1c;
+      align-items: center;
+      border: 1px solid #b71c1c;
+      cursor: pointer;
+
+      &:active {
+        background-color: #b71c1c;
+        color: #fff;
+      }
+    }
+  }
+
+  table {
+    border-collapse: collapse;
+  }
+
+  th {
+    padding: 10px 10px;
+    background-color: #eee;
+  }
+
+  td {
+    padding: 10px 10px;
+  }
+  table,
+  th,
+  td {
+    border: 1px solid #ddd;
+    text-align: center;
+  }
 }
