[UPDATE] Client Add/Edit/Remove features done [ADD] Campaign, Report skeleton screens added

--- a/src/containers/Clients/List/ClientListContainer.module.scss
+++ b/src/containers/Clients/List/ClientListContainer.module.scss
@@ -91,4 +91,12 @@
       opacity: 0.5;
     }
   }
+
+  .iconRefresh {
+    margin-left: 5px;
+    color: $primary;
+    &:active {
+      opacity: 0.5;
+    }
+  }
 }
