--- a/src/containers/Clients/List/ClientListContainer.module.scss
+++ b/src/containers/Clients/List/ClientListContainer.module.scss
@@ -12,22 +12,43 @@
     justify-content: space-between;
     margin-bottom: 20px;
 
-    input {
-      width: 50%;
+    .searchbar {
+      flex: 1;
       height: 40px;
-      font-size: 16px;
-      padding: 0px 20px;
       border-radius: 20px;
-      border: 1px solid $grey;
+      background-color: $white;
+      border: 1px solid $primary;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0px 20px;
+      margin-right: 20px;
 
-      &:focus {
-        outline: none;
-        border: 1px solid $primary;
+      &:active {
+        background-color: $white;
+      }
+
+      .iconSearch {
+        color: $primary;
+        font-size: 18px;
+        margin-right: 5px;
+      }
+
+      input {
+        width: 100%;
+        height: 40px;
+        font-size: 16px;
+        border-style: none;
+
+        &:focus {
+          outline: none;
+        }
       }
     }
 
     div {
-      width: 100px;
+      width: 150px;
       height: 40px;
       border-radius: 20px;
       font-size: 16px;
