--- a/src/containers/Participants/List/ParticipantListContainer.module.scss
+++ b/src/containers/Participants/List/ParticipantListContainer.module.scss
@@ -128,15 +128,26 @@
     position: fixed;
     bottom: 0;
     a.active {
-      background-color: #4caf50;
+      background-color: #03a9f4;
       color: white;
+      border: 1px solid #03a9f4;
     }
     a:hover:not(.active) {
       background-color: #ddd;
     }
     a {
-      margin: 0 4px;
-      font-size: 20px;
+      color: black;
+      float: left;
+      padding: 8px 16px;
+      text-decoration: none;
+      transition: background-color 0.3s;
+      border: 1px solid #ddd;
     }
+  }
+
+  .activeItem {
+    background-color: #03a9f4;
+    color: white;
+    border: 1px solid #03a9f4;
   }
 }
