--- a/src/containers/Report/ReportContainer.module.scss
+++ b/src/containers/Report/ReportContainer.module.scss
@@ -5,4 +5,134 @@
   flex-direction: column;
   padding: 20px;
   font-size: 16px;
+
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+
+    .searchbar {
+      flex: 1;
+      height: 40px;
+      border-radius: 20px;
+      background-color: $white;
+      border: 1px solid $primary;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0px 20px;
+      margin-right: 20px;
+
+      &:active {
+        background-color: $white;
+      }
+
+      .iconSearch {
+        color: $primary;
+        font-size: 18px;
+        margin-right: 5px;
+      }
+
+      input {
+        width: 100%;
+        height: 40px;
+        font-size: 16px;
+        border-style: none;
+
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+
+    div {
+      width: 150px;
+      height: 40px;
+      border-radius: 20px;
+      font-size: 16px;
+      line-height: 40px;
+      font-weight: 600;
+      text-align: center;
+      color: $primary;
+      align-items: center;
+      border: 1px solid $primary;
+      cursor: pointer;
+
+      .icon {
+        margin-right: 5px;
+      }
+
+      &:focus {
+        outline: none;
+      }
+      &:active {
+        background-color: $primary;
+        color: $white;
+      }
+    }
+  }
+
+  table {
+    border-collapse: collapse;
+    margin: 8px;
+  }
+
+  .header {
+    background: $primary;
+  }
+
+  th {
+    height: 40px;
+    padding: 10px 10px;
+    color: $white;
+  }
+
+  td {
+    padding: 10px 10px;
+  }
+  table,
+  th,
+  td {
+    border: 1px solid $light-grey;
+    text-align: center;
+  }
+
+  .iconPencil {
+    margin-right: 5px;
+
+    &:active {
+      opacity: 0.5;
+    }
+  }
+  .iconTrash {
+    margin-left: 5px;
+    color: $danger;
+    &:active {
+      opacity: 0.5;
+    }
+  }
+
+  .iconRefresh {
+    margin-left: 5px;
+    color: $primary;
+    &:active {
+      opacity: 0.5;
+    }
+  }
+
+  .selector {
+    width: 500px;
+    display: flex;
+    flex-direction: row;
+    padding: 4px;
+    span {
+      flex: 1;
+      padding: 6px;
+    }
+    .select {
+      flex: 3;
+    }
+  }
 }
