--- a/src/containers/Report/ReportContainer.module.scss
+++ b/src/containers/Report/ReportContainer.module.scss
@@ -152,7 +152,11 @@
 
   .select {
     select .span {
-      background-color: #ffffff;
+      background-color: #ffffff !important;
     }
+  }
+
+  .css-d8oujb {
+    background-color: #ffffff;
   }
 }
