--- a/src/containers/Report/ReportContainer.module.scss
+++ b/src/containers/Report/ReportContainer.module.scss
@@ -151,12 +151,8 @@
   }
 
   .select {
-    select .span {
-      background-color: #ffffff !important;
+    span {
+      background-color: #ffffff;
     }
-  }
-
-  .css-d8oujb {
-    background-color: #ffffff;
   }
 }
