--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,12 @@
   width: 100%;
   height: 100vh;
 }
+
+.react-datepicker-wrapper {
+  flex: 1;
+}
+
+.react-datepicker__input-container {
+  width: 100%;
+  display: flex;
+}
