--- a/src/containers/Campaigns/Add/CampaignAddContainer.module.scss
+++ b/src/containers/Campaigns/Add/CampaignAddContainer.module.scss
@@ -92,6 +92,62 @@
     }
   }
 
+  .logoItem {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    font-size: 16px;
+    margin-bottom: 10px;
+
+    span {
+      margin-top: 10px;
+      width: 150px;
+      text-align: center;
+    }
+    .logoContainer {
+      flex: 1;
+
+      .file {
+        display: none;
+      }
+
+      .btnUpload {
+        flex: 1;
+        height: 40px;
+        border-radius: 1px;
+        font-size: 16px;
+        line-height: 40px;
+        font-weight: 600;
+        text-align: center;
+        color: $white;
+        background-color: $primary;
+        align-items: center;
+        border: 1px solid $primary;
+        margin-bottom: 10px;
+        cursor: pointer;
+
+        .icon {
+          margin-right: 5px;
+        }
+
+        &:active {
+          background-color: $white;
+          color: $primary;
+        }
+      }
+
+      img {
+        width: 100%;
+        margin-top: 10px;
+      }
+
+      span {
+        width: 100%;
+        margin-top: 10px;
+      }
+    }
+  }
+
   .questionContainer {
     border: 1px solid $light-grey;
     padding: 20px;
