[WIP] bugs reported by Julie

--- a/src/containers/Report/ReportContainer.module.scss
+++ b/src/containers/Report/ReportContainer.module.scss
@@ -99,6 +99,11 @@
     text-align: center;
   }
 
+  .campaign {
+    text-decoration: underline;
+    color: $primary;
+  }
+
   .iconPencil {
     margin-right: 5px;
 
