[FIX] requests from Julie implemented

--- a/src/containers/CampaignReport/List/CampaignReportContainer.module.scss
+++ b/src/containers/CampaignReport/List/CampaignReportContainer.module.scss
@@ -78,7 +78,7 @@
 
     .tab {
       width: 100%;
-      background-color: #3740b3;
+      background-color: $primary;
       color: #ffffff;
       height: 50px;
       line-height: 50px;
